# tessera-core

./: .env.example  .gitignore  0001-Merge-Cursor-swarm-round-trip-architecture-policy-cr.patch  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml  security_best_practices_report.md
.cursor/rules/: agent-skills.mdc
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml  ci.yml
benchmarks/: cross_arch_benchmark.py  run_focused.py
docs/: AGENT_SKILLS.md  Tessera-Audit-Module-Usage-Guide.docx  swarm-roundtrip-architecture.md  wire-format-spec.md
docs/use-cases/: agriculture-mining-comparison-and-scores.md  agriculture-mining-use-case.md  healthcare-medical-imaging-comparison-and-scores.md  healthcare-medical-imaging-use-case.md
examples/: demo_transfer.py
k8s/: deployment.yaml  ingress.yaml  monitoring.yaml
scripts/: deploy.sh  health-check.sh  rollback.sh
tessera/: __init__.py  __main__.py  api.py  audit.py  binary.py  cli.py  correspondence.py  credits.py  drift.py  fingerprint.py  gates.py  mcp_server.py  mode_aq.py  mode_b.py  mode_c.py  mode_d.py  mode_w.py  policy.py  privacy.py  registry.py  signing.py  swap.py  swarm.py  token.py  transfer.py  uhs.py  utils.py  weight_ops.py
tests/: conftest.py  test_audit.py  test_binary.py  test_cli.py  test_correspondence.py  test_credits.py  test_drift.py  test_fingerprint.py  test_gates.py  test_integration.py  test_mcp_server.py  test_mode_aq.py  test_mode_w.py  test_policy.py  test_privacy.py  test_registry.py  test_security.py  test_signing.py  test_swarm.py  test_swarm_aggregator.py  test_swarm_integration.py  test_token.py  test_transfer.py  test_uhs.py  test_weight_ops.py
