[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tessera-core"
version = "0.1.0"
description = "An open protocol for AI-to-AI knowledge transfer across architectures"
readme = "README.md"
license = "Apache-2.0"
authors = [{name = "Inco Creative", email = "kirk@incocreative.com"}]
keywords = ["ai", "machine-learning", "knowledge-transfer", "neural-networks", "pytorch"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0",
    "scipy>=1.8.0",
    "safetensors>=0.3.0",
    "msgpack>=1.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
tessera = "tessera.cli:main"
tessera-mcp = "tessera.mcp_server:main"

[project.optional-dependencies]
mcp = [
    "mcp[cli]>=1.0.0",
]
railway = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21.0",
    "black==25.11.0",
    "mypy>=0.990",
    "ruff>=0.1.0",
]
all = [
    "tessera-core[dev,mcp,railway]",
]

[project.urls]
Homepage = "https://github.com/incocreativedev/tessera-core"
Documentation = "https://github.com/incocreativedev/tessera-core#readme"
Repository = "https://github.com/incocreativedev/tessera-core"
Issues = "https://github.com/incocreativedev/tessera-core/issues"
Changelog = "https://github.com/incocreativedev/tessera-core/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["tessera"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
